<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/rider_login_email"
        android:layout_alignRight="@+id/bt_login"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/rider_login_password"
        android:layout_alignLeft="@+id/et_password"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/rider_login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rider_login_password"
        android:layout_alignParentTop="true"
        android:layout_marginTop="179dp"
        android:text="@string/email" />

    <TextView
        android:id="@+id/rider_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rider_login_email"
        android:layout_marginTop="30dp"
        android:layout_toLeftOf="@+id/et_email"
        android:text="@string/password" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="login"
        android:text="@string/login" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bt_login"
        android:layout_below="@+id/bt_login"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/bn_forgot_password"
        android:onClick="register"
        android:text="@string/register" />

    <Button
        android:id="@+id/bn_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bt_register"
        android:layout_alignBottom="@+id/bt_register"
        android:layout_alignRight="@+id/bt_login"
        android:onClick="getPassword"
        android:text="@string/forgot_password" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/common_signin_btn_text_focus_dark" />

</RelativeLayout>