<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:src="@drawable/common_signin_btn_text_pressed_dark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo" >

            <EditText
                android:id="@+id/et_cfpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView1"
                android:layout_alignLeft="@+id/et_password"
                android:ems="10"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/textView1"
                android:ems="10"
                android:inputType="textEmailAddress" >

                <requestFocus android:layout_width="wrap_content" />
            </EditText>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView1"
                android:layout_alignLeft="@+id/et_email"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_email"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="25dp"
                android:text="Confirm Password"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_email"
                android:layout_below="@+id/tv_email"
                android:layout_marginTop="26dp"
                android:text="@string/password"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="25dp"
                android:text="Firstname"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_fname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView3"
                android:layout_toRightOf="@+id/textView1"
                android:ems="10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_lname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView4"
                android:layout_toRightOf="@+id/textView1"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="26dp"
                android:text="Lastname"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView4"
                android:layout_below="@+id/textView4"
                android:layout_marginTop="23dp"
                android:text="@string/phone"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView5"
                android:layout_alignLeft="@+id/et_lname"
                android:ems="10"
                android:inputType="phone" />

            <Button
                android:id="@+id/bn_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/bt_term"
                android:layout_alignRight="@+id/textView1"
                android:layout_below="@+id/bt_term"
                android:text="Continue" />

            <CheckBox
                android:id="@+id/cb_term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:text="I agree with Term" />

            <Button
                android:id="@+id/bt_term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/cb_term"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/cb_term"
                android:onClick="term"
                android:text="@string/term" />

            <Button
                android:id="@+id/bt_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/bn_continue"
                android:text="@string/cancel" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/et_email"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@id/et_email"
                android:gravity="bottom|left"
                android:text="@string/email"
                android:textSize="18sp" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>